small changes to invt.tex

--- a/wl/invt/doc/invt.tex
+++ b/wl/invt/doc/invt.tex
@@ -7,14 +7,24 @@
 
 
 
-\subsection{Entropic sampling}
+\subsection{Flat-distribution sampling}
+
+
 
 Consider the problem of sampling a system
 using the method of Markov chain Monte Carlo (MC).
 %
-We are interested in the distribution $p^*_i$
-along a discrete state $i$,
-or equivalently, the potential of mean force (PMF),
+We are interested in the distribution, $p^*(z)$,
+along a quantity $z$.
+%
+In practice, we shall discretize $z$
+such that each integer $i$ represents
+a small interval, or a bin, $(z, z + dz)$.
+%
+In this way,
+the distribution can be written as $p^*_i$,
+and the potential of mean force (PMF)
+is given by
 %
 \begin{equation}
 \phi^*_i = -\log p^*_i.
@@ -29,6 +39,7 @@ with $g_E$ and $\beta$ being the density of states,
 and reciprocal temperature, respectively.
 
 
+
 For a large system,
 the distribution $p^*_i$ is often
 narrowly peaked at a certain $i_0$.
@@ -38,9 +49,9 @@ it is often desirable to carry out
 a biased sampling that targets
 a wider distribution $p_i$.
 %
-Here, we refer to simulations that target
-a flat or nearly flat distribution
-as entropic or multicanonical sampling.
+%Here, we refer to simulations that target
+%a flat or nearly flat distribution
+%as entropic or multicanonical sampling.
 
 
 
@@ -65,7 +76,7 @@ we get
 
 
 From Eq. \eqref{eq:pi_p_phi1},
-it is clear that achieving the target distribution
+it is clear that to achieve the target distribution
 $\pi_i = p_i$ requires
 %
 \begin{equation}
@@ -87,8 +98,9 @@ allows us to adjust the bias potential
 inversely according to the observed histogram.
 %
 Once the observed histogram matches
-the target distribution,
-the PMF can be computed from Eq. \eqref{eq:bias_pmf}.
+the target distribution, $p_i$,
+the PMF, $\phi^*_i$,
+can be deduced from Eq. \eqref{eq:bias_pmf}.
 
 The above inversion process can be difficult
 in practice,
@@ -96,7 +108,10 @@ for it depends on the precision of the histogram,
 which requires some estimation
 of the autocorrelation time.
 
+
+
 \subsection{Wang-Landau algorithm}
+
 
 
 The Wang-Landau (WL) algorithm is a convenient technique
@@ -127,6 +142,7 @@ $v_i$ should approach a constant of $i$
 upon convergence,
 
 
+
 In the WL algorithm, $v_i$ are updated
 in each MC step $t$,
 and they may be written as $v_i(t)$.
@@ -134,15 +150,16 @@ and they may be written as $v_i(t)$.
 The updating formula is
 %
 \begin{equation}
-  v_{i(t)}(t+1)
+  v_i(t+1)
   =
-  v_{i(t)}(t)
+  v_i(t)
   +
-  \frac{ \alpha(t) } { p_{i(t)} }.
+  \delta_{i, \, i(t)}
+  \frac{ \alpha(t) } { p_i }.
   \label{eq:wl_update}
 \end{equation}
 %
-where $i(t)$ is the state at step $t$,
+where $i(t)$ is the bin at step $t$,
 and $\alpha(t)$ is the updating magnitude.
 %
 The values of $v_j(t)$ at $j \ne i(t)$
@@ -153,9 +170,8 @@ the distribution collected from
 the trajectory is identical to $p^*_i$.
 %
 However, it turns out that
-even upon convergence,
-$v_i(t)$ only approximately approach a constant,
-with the deviations dependent on $\alpha$.
+the updating scheme brings about an error,
+which means that $v_i(t)$ will not be a constant.
 
 
 
@@ -171,7 +187,7 @@ as it breaks the Markovian nature
 that underlies Eq. \eqref{eq:pi_p_v}.
 %
 Thus, one has to decrease $\alpha$ over time
-in order to improve the resolution of $v_i$.
+in order to reduce the error of $v_i$.
 
 
 
@@ -194,7 +210,7 @@ This scheme works well for early stages.
 However, in later stages, it tends to reduce $\alpha$
 too quickly, making the asymptotic error
 saturate.
-%
+
 
 
 \subsection{$1/t$ formula}
@@ -226,39 +242,49 @@ different from $1.0$.
 
 
 
-\section{Inverse time formula}
-
-
-
-Here we attempt to give a somewhat different derivation
-of Eq. \eqref{eq:alpha_invt}.
+Here we shall attempt to derive
+the optimal $\alpha(t)$ for a class of
+multiple-bin updating schemes
+that generalizes Eq. \eqref{eq:wl_update}.
 %
-We shall show that the optimality of Eq. \eqref{eq:alpha_invt}
-holds even if we take into account
-correlation among successive MC steps.
+In the multiple-bin case,
+the updates of each step affect
+not only the current bin $i(t)$,
+but also a few neighboring ones
+(such schemes are designed
+to maintain a smooth bias potential).
 %
-Particularly, the coefficient of proportionality, $1.0$,
-is optimal in a large class of cases;
+We shall show that
+the coefficient of proportionality, $1.0$
+in Eq. \eqref{eq:alpha_invt}
+requires modifications in multiple-bin update scheme,
+but not in the single-bin updating scheme,
+Eq. \eqref{eq:wl_update}
+(as in the WL algorithm).
 %
-the only variable permissible by the optimal condition
-is the origin of time,
-i.e., $t$ in Eq. \eqref{eq:alpha_invt}
-may be replaced by $t - t_0$ for some $t_0$,
-which may be interpreted as the equilibration time.
-
-Further, our derivation is applicable
-to more elaborate updating schemes used in metadynamics,
-in which a visit to state $i$ would affect
-the bias potential at a few neighboring states).
+Below, we shall first derive the optimal $\alpha(t)$
+for the single-bin updating scheme
+in Section \ref{sec:single-bin},
+and handle the multiple-bin case
+in Section \ref{sec:multiple-bin}.
 
 
-\subsection{Overview}
+
+\section{\label{sec:single-bin}
+Single-bin update}
 
 
-We shall first express the error of $v(t)$
-as a functional of the protocol $\alpha(t)$.
-Then by variating the error with respect to $\alpha(t)$,
-we can find the optimal choice.
+
+In this section,
+we shall derive the optimal $\alpha(t)$
+for the single-bin updating scheme,
+Eq. \eqref{eq:wl_update}.
+%
+To do so,
+we shall first express the error of $v(t)$
+as a functional of $\alpha(t)$,
+and then find the optimal value
+by functional variation.
 
 
 
@@ -282,7 +308,7 @@ $\dot v_i = dv_i/dt$,
 and $h_i(t) = \delta_{i, i(t)}$
 is the instantaneous histogram,
 which is equal to $1.0$
-for the current state
+for the current bin $i(t)$
 or zero otherwise.
 
 
@@ -422,10 +448,8 @@ $\bar v = \sum_{i = 1}^n p_i v_i$.
 Our aim is to find the $\alpha(t)$
 that minimizes Eq. \eqref{eq:error_sum}.
 %
-Owing to decoupled nature of Eq. \eqref{eq:dxdt_WL},
-we shall first find the $\alpha(t)$ that
-minimizes each individual
-$\left\langle x_i^2(t) \right\rangle$.
+To do so, we shall first consider
+a simpler one-variable problem.
 
 
 
@@ -433,10 +457,11 @@ $\left\langle x_i^2(t) \right\rangle$.
 
 
 
-Consider the following one-variable equation,
+Consider the following equation
+of a single variable:
 %
 \begin{equation}
-\dot x(t) = -\alpha(t) \, A \left[ x(t) - \xi(t) \right],
+\dot x(t) = -\alpha(t) \, \lambda \left[ x(t) - \xi(t) \right],
 \label{eq:dxdt_alpha}
 \end{equation}
 %
@@ -457,20 +482,17 @@ Additionally, we require
 \end{equation}
 %
 For example, for a white noise,
-$\kappa(t) \propto \delta(t)$
-is proportional to Dirac's $\delta$-function.
+$\kappa(t)$ is proportional to
+Dirac's $\delta$-function, $\delta(t)$.
 %
 We wish to show that the optimal $\alpha(t)$
 of minimizing $\langle x^2(t) \rangle$ at long times
 is given by
 %
 \begin{equation}
-  \alpha(t) = \frac{1}{A \, (t - t_0)}.
+  \alpha(t) = \frac{1}{\lambda \, (t + t_0)}.
 \label{eq:alpha_opt}
 \end{equation}
-%
-
-
 
 
 
@@ -478,8 +500,8 @@ To do so, we first recall
 the formal solution of Eq. \eqref{eq:dxdt_alpha}:
 %
 \begin{equation}
-x(t) = x(0) \, e^{-A \, q(t)}
-+ \int_0^t u(t') \, \xi(t') \, dt',
+x(t) = x(0) \, e^{-\lambda \, q(t)}
++ \int_0^t \dot u(t') \, \xi(t') \, dt',
 \label{eq:xt_solution}
 \end{equation}
 %
@@ -493,13 +515,9 @@ q(t) \equiv \int_0^t \alpha(t') \, dt',
 and
 %
 \begin{align}
-u_t(t')
+u(q(t'))
 &\equiv
-e^{-A \, q(t) + A \, q(t') } \, A \, \alpha(t')
-\notag
-\\
-&=
-\frac{d}{dt'} e^{-A \, q(t) + A \, q(t')}.
+e^{-\lambda \, q(t) + \lambda \, q(t')}.
 \label{eq:ut_definition}
 \end{align}
 
@@ -517,74 +535,59 @@ of Eq. \eqref{eq:xt_solution} can be neglected, and
 %
 \begin{align}
 \left\langle x^2(t) \right\rangle
+%&=
+%\int_0^t \int_0^t \dot u(t') \, \dot u(t'')
+%    \left\langle \xi(t') \xi(t'') \right\rangle dt'' \, dt'
+%\notag
+%\\
 &=
-\int_0^t \int_0^t u(t') \, u(t'')
-    \left\langle \xi(t') \xi(t'') \right\rangle dt'' \, dt'
-\notag
-\\
-&=
-\int_0^t \int_0^t u(t') \, u(t'') \kappa(t' - t'') \, dt'' \, dt'.
+\int_0^t \int_0^t
+  \dot u(q(t')) \, \dot u(q(t'')) \,
+  \kappa(t' - t'') \, dt'' \, dt'.
 \label{eq:x2t_average}
 \end{align}
 
 
 
-We shall minimize Eq. \eqref{eq:x2t_average} under a fixed $q(t)$.
-%
-By Eq. \eqref{eq:ut_definition},
-this is equivalent to fixing
-%
+Variating this expression and
+using the Euler-Lagrange equation yields
 $$
-\int_0^t u_t(t') \, dt'
-=
-1 - e^{-A \, q(t)}.
-$$
-%
-Thus, via a Lagrange multiplier $\lambda$,
-the minimization can be done on
-%
-$$
-%S[u_t(\tau)]
-%\equiv
-\langle x^2(t) \rangle - \lambda \int_0^t u_t(t') \, dt'.
-$$
-%
-Variating the above expression with respect to $u_t(t')$ yields
-$$
-2 \int_0^t u_t(t') \, \kappa(t' - \tau) \, dt'
-= \lambda.
-$$
-Differentiating this expression with respect to $\tau$
-and integrating by parts,
-$$
-\int_0^t u'_t(t') \, \kappa(t' - \tau) \, dt' = 0,
+\begin{aligned}
+0
+&=
+\frac{d}{d\tau} \int_0^t \dot u(q(t')) \, \kappa(t' - \tau) \, dt'
+= \int_0^t \ddot u(q(t')) \, \kappa(t' - \tau) \, dt',
+\end{aligned}
 $$
 where we have dropped the boundary terms
 by using Eq. \eqref{eq:kappat_limit}.
 %
-In fact, we can repeat the process $n$ times, and
-$$
-\int_0^t u_t^{(n)}(t') \, \kappa(t' - \tau) \, dt' = 0,
-\qquad (n \ge 1)
-$$
+%In fact, we can repeat the process $n$ times, and
+%$$
+%\int_0^t u^{(n)}(t') \, \kappa(t' - \tau) \, dt' = 0,
+%\qquad (n \ge 1)
+%$$
 %
 In order for this to hold for any $\tau$,
 we must have
-$$
-u'_t(t') = 0,
+%
+\begin{equation}
+\ddot u(q(t')) = 0,
 \qquad
 \mathrm{or}
 \;\;
-u_t(t') = c,
-$$
+\dot u(q(t')) = c,
+\label{eq:ddu_eq_0}
+\end{equation}
+%
 where $c$ is a constant of $t'$.
 %
 Using Eq. \eqref{eq:ut_definition}
 we get
 $$
-e^{-A \, q(t) + A \, q(t')}
+e^{-\lambda \, q(t) + \lambda \, q(t')}
 =
-c \, (t' - t_0),
+c \, (t' + t_0),
 $$
 where $t_0$ is a constant.
 %
@@ -593,15 +596,36 @@ yields Eq. \eqref{eq:alpha_opt}.
 
 
 
-\subsection{Generalization to metadynamics}
+\subsection{Optimal $\alpha(t)$ for the single-bin update}
 
 
 
-We can readily extend the above analysis to metadynamics.
+Let us consider minimizing Eq. \eqref{eq:error_sum}
+for the single-bin updating scheme.
+%
+From \eqref{eq:dxdt_WL}, we find that
+with $\lambda = 1$,
+Eq. \eqref{eq:alpha_opt}
+will optimize each term $\langle x_i^2 \rangle$,
+and hence the sum.
+%
+Thus, Eq. \eqref{eq:alpha_invt} is optimal
+up to a constant defining the origin of $t$.
+
+
+
+\section{\label{sec:multiple-bin}
+Multiple-bin update}
+
+
+
+We can readily extend the above analysis to
+the multiple-bin updating scheme.
+%
 In this case,
-upon a visit to state $j$,
+upon a visit to bin $j$,
 we update not only $v_j$,
-but also $v_i$ for a few nearby states $i$.
+but also $v_i$ for a few neighboring bins $i$.
 %
 The update magnitudes are given by a matrix $\mathbf w$
 with elements $w_{ij}$.
@@ -610,38 +634,58 @@ Then, Eq. \eqref{eq:vt_diffeq} is generalized to
 \begin{equation}
   \dot v_i(t) =
   \sum_{j=1}^n \alpha(t) \, h_j(t) \frac{ w_{ij} } { p_j }.
-  \label{eq:vt_diffeq_metadynamics}
+  \label{eq:vt_diffeq_mbin}
 \end{equation}
+
+
+The procedure of optimization is largely
+the same as the single-bin case,
+whereas the matrix nature brings about
+some difficulties that require
+certain limitations and approximations.
+
+
+
+\subsection{Updating matrix $\mathbf w$}
 
 
 
 The matrix $\mathbf w$ is not arbitrary.
 %
-To sample a desired distribution $\mathbf p = (p_1, \dots, p_n)$,
-the matrix $\mathbf w$ must have $(1, \dots, 1)^T$
-as a right eigenvector.
+A necessary condition to sample desired distribution
+$\mathbf p = (p_1, \dots, p_n)$
+is that in Eq. \eqref{eq:vt_diffeq_mbin}
+when $h_j(t)$ coincides with $p_j$,
+the rate of change $\dot v_i(t)$
+should be independent of $i$.
 %
-This condition is required by
-Eq. \eqref{eq:vt_diffeq_metadynamics}
-to ensure that
-when the average histograms $h_j(t)$
-coincide with $p_j$,
-the rates of change $\dot v_i(t)$
-are independent of $i$,
-i.e., $v_i(t)$ approach a constant.
+This allows $v_i(t)$ to approach a constant
+asymptotically.
 %
-By a proper scaling of $\alpha(t)$,
-we can set this eigenvalue to be $1.0$, and
+Thus, by a proper scaling of $\alpha(t)$,
+we may write this condition as
+%
 \begin{equation}
   \sum_{j = 1}^n w_{ij} = 1.
   \label{eq:w_sumj}
 \end{equation}
 %
-This properties shows that the transpose
-of $\mathbf w$ resembles a transition matrix.
+In other words, $(1, \dots, 1)^T$
+is a right eigenvector of $\mathbf w$
+with eigenvalue $1$.
 %
+We shall further assume this eigenvalue
+is the largest of all eigenvalues.
+%
+In this way,
+the transpose $\mathbf w^T$
+resembles a transition matrix.
+
+
+
 To simplify the following discussion,
-we shall further require detailed balance
+we shall further impose a stronger
+detailed balance condition:
 %
 \begin{equation}
   p_i \, w_{ij} = p_j \, w_{ji}.
@@ -659,55 +703,301 @@ It follows that
 i.e., $\mathbf p$ is a left eigenvector of $\mathbf w$.
 
 
+Further, by Eq. \eqref{eq:w_detailedbalance},
+we can define a symmetric matrix $\hat{\mathbf w}$
+as $\hat w_{ij} = \sqrt{p_i/p_j} \, w_{ij}$
+that can be diagonalized
+with a set of orthonormal eigenvectors:
+%
+$\sum_{i = 1}^n U_{ki} \, \hat w_{ij} = \lambda_k \, U_{kj}$.
+%
+Thus,
+in terms of diagonalizing $\mathbf w$, we have
+\begin{equation}
+  \sum_{i = 1}^n T_{ki} \, w_{ij} = \lambda_k \, T_{kj},
+  \label{eq:T_w}
+\end{equation}
+where
+$T_{ij} = \sqrt{p_j} \, U_{ij}$ satisfies
+the orthonormal conditions:
+%
+\begin{align}
+\sum_{k = 1}^n T_{ki} \, T_{kj}
+&= \delta_{ij} \, p_i,
+\label{eq:T_orthonormal_cols}
+\\
+\sum_{k = 1}^n \frac{ T_{ik} \, T_{jk} }{ p_k }
+&= \delta_{ij}.
+\label{eq:T_orthonormal_rows}
+\end{align}
 
 
-Under these conditions,
-we can apply Eqs. \eqref{eq:x_def} and \eqref{eq:xi_def}
-and write
+
+\subsection{Linearization and decoupling}
+
+
+
+We can now simplify Eq. \eqref{eq:vt_diffeq_mbin}.
+%
+By using Eq. \eqref{eq:w_balance},
+we can show that \eqref{eq:dvbardt} remains true.
+%
+Thus, for Eq. \eqref{eq:x_def}, we have
+%
+\begin{equation}
+  \sum_{i=1}^n p_i \, x_i = 0.
+\end{equation}
+%
+and
+%
 $$
-\dot x_i(t)
-=
+\begin{aligned}
+\dot x_i
+&= \alpha(t) \sum_{j=1}^n w_{ij}
+\left( \frac{ h_j } { p_j }  - 1 \right)
+\\
+&=
 -\alpha(t) \sum_{j = 1}^n
-w_{ij} \left[ x_j(t) - \xi_j (t) \right].
+w_{ij} \left[ x_j(t) - \frac{\zeta_j (t)}{p_j} \right],
+\end{aligned}
 $$
+where
+we have expanded the right-hand side
+in linear terms of $x_j$ in the second step.
+
+
 Now by diagonalizing the matrix $\mathbf w$
-(assuming this can be done), we again have
-a set of decoupled equations
-in terms of the eigenmodes $y_i = \sum_{j=1}^n c_{ij} \, x_j$.
+using matrix defined in Eqs. \eqref{eq:T_w},
+\eqref{eq:T_orthonormal_cols},
+and
+\eqref{eq:T_orthonormal_rows},
+we get a set of decoupled equations
 %
 \begin{equation}
 \dot y_i(t)
 =
--\alpha(t) \, A_i \left[ y_i(t) - \eta_i (t) \right].
+-\alpha(t) \, \lambda_i
+[y_i(t) - \eta_i(t)],
 \label{eq:yt_diffeq}
 \end{equation}
 %
-Here we have ordered the modes, such that $A_1 \ge \cdots \ge A_n$
-the magnitudes $A_i$.
-%
-For example, the mode $y_1 = \sum_{j=1}^n p_j \, x_j$
-corresponds to $A_1 = 1$,
-this mode however vanishes by definition
-\eqref{eq:x_def}.
+where
+\begin{align}
+  y_i &= \sum_{j=1}^n T_{ij} \, x_j,
+  \label{eq:y_def}
+  \\
+  \eta_i &= \sum_{j=1}^n T_{ij} \frac{ \zeta_j}{ p_j},
+  \label{eq:eta_def}
+\end{align}
 
 
-Each mode $y_i$ with $i \ge 2$ decays at a rate of $e^{-A_i \, q(t)}$.
-%
-At long times, the error defined in Eq. \eqref{eq:error_sum}
-is dominated by the slowest-decaying mode.
-%
-This mode is associated with $A_n$,
-or the smallest eigenvalue of $\mathbf w$.
-%
-Since Eq. \eqref{eq:yt_diffeq}
-is of the form of Eq. \eqref{eq:dxdt_alpha},
-%
-the optimal $\alpha(t)$
-is given by Eq. \eqref{eq:alpha_opt},
-with $A$ there interpreted as $A_n$.
+\subsection{Target function}
 
 
-% argument that the WL is the best updating scheme
+Further, we have from Eq. \eqref{eq:T_orthonormal_cols},
+\begin{align}
+  \mathcal E
+  =
+  \sum_{k = 1}^n y_k^2
+  =
+  \sum_{i, j, k=1}^n T_{ki} \, T_{kj} \, x_i \, x_j
+  = \sum_{i = 1}^n p_i \, x_i^2.
+  \label{eq:y2_sum}
+\end{align}
+%
+If we ordered $y_k$ in descending order of $\lambda_k$,
+%
+then, the mode $y_1 = \sum_{j=1}^n p_j \, x_j$
+corresponds to $\lambda_1 = 1$,
+vanishes.
+%
+Thus, the sum of $y_k$ in \eqref{eq:y2_sum}
+can start from $i = 2$.
+
+
+
+In analogous to Eq. \eqref{eq:x2t_average},
+the error function defined in Eq. \eqref{eq:y2_sum}
+can be written as
+%
+\begin{align}
+  S
+  &= \sum_{i = 2}^n \langle y_i^2 \rangle
+  \notag
+  \\
+  &=
+  \int_0^t \int_0^t
+  \sum_{i = 2}^n
+  \dot u_i(q(t')) \,
+  \dot u_i(q(t'')) \,
+  \kappa_i(t' - t'') \, dt' \, dt'',
+  \label{eq:y2_int}
+\end{align}
+%
+where
+\begin{align}
+  u_i(q(t'))
+  &\equiv
+  e^{\lambda_i \, [q(t') - \, q(t)]}
+  \\
+  \kappa_i(t - t')
+  &=
+  \left\langle \eta_i(t) \, \eta_i(t') \right\rangle.
+\end{align}
+%
+The extremal condition of $S$ is
+%
+\begin{align}
+\sum_{i=2}^n
+u_i'(q(\tau))
+\int_0^t
+\ddot u_i(q(t')) \, \kappa_i(t' - \tau) \, dt' = 0.
+\label{eq:optimal_mbin1}
+\end{align}
+%
+If all $\lambda_i$ are the same,
+so are all $u_i$,
+and the above condition can be satisfied
+by Eq. \eqref{eq:ddu_eq_0},
+which is the single-bin case.
+
+
+
+\subsection{Optimal $\alpha(t)$}
+
+
+The general solution of Eq. \eqref{eq:optimal_mbin1}
+is harder to obtain.
+%
+To proceed, we shall further assume perfect sampling,
+%
+\begin{equation}
+  \langle \zeta_i(t) \, \zeta_j(t') \rangle
+  =
+  p_i \, \delta_{ij} \, \delta(t - t').
+  \label{eq:zz_perfect}
+\end{equation}
+%
+Thus, from Eqs. \eqref{eq:T_orthonormal_rows} and \eqref{eq:eta_def},
+we get
+%
+\begin{equation}
+  \kappa_i(t - t')
+  =
+  \sum_{j,k = 1}^n
+  \frac{ T_{ij} } { p_j }
+  \frac{ T_{ik} } { p_k }
+  \langle \zeta_j(t) \, \zeta_k(t') \rangle
+  =
+  \delta(t - t').
+  \label{eq:kappa_perfect}
+\end{equation}
+%
+Thus, Eq. \eqref{eq:optimal_mbin1}
+is simplified as
+%
+\begin{align}
+  \sum_{i=1}^n
+  \ddot u_i(q(\tau)) \, u'_i(q(\tau)) = 0.
+  \label{eq:optimal_mbin2}
+\end{align}
+%
+We can study two limiting cases.
+%
+For $\tau \ll t$,
+the dominant contribution comes from
+the term(s) with the smallest eigenvalue $\lambda_i = \lambda_n$,
+which leads to
+$$
+\ddot u_n(\tau) = 0,
+\quad
+\dot u_n(\tau) = c,
+\quad
+u_n(\tau) = c \, (\tau + t_0),
+$$
+which means
+$$
+\alpha(\tau) \approx \frac{1}{\lambda_n \, (\tau + t_0)}.
+$$
+
+
+A more direct, and often more accurate, approach
+is to assume the functional form
+$$
+\alpha(\tau) = \frac{1}{\lambda \, (\tau + t_0) }.
+$$
+Using this and Eq. \eqref{eq:kappa_perfect}
+in Eq. \eqref{eq:y2_sum}, we get
+%
+\begin{equation}
+S
+=
+\int_0^t
+\sum_{i=0}^n \dot u_i^2(q(t')) \, dt'
+\stackrel{t \to \infty}
+{=\joinrel=\joinrel=}
+\frac{1}{t+t_0}
+\sum_{i = 2}^n
+\frac{ \lambda_i^2 } { \lambda \, (2 \, \lambda_i - \lambda) },
+\label{eq:y2_sum_perfect_invt}
+\end{equation}
+%
+and the optimal $\lambda$
+can be found from the smallest root of
+%
+\begin{equation}
+\sum_{i = 2}^n
+\frac{ \lambda_i - \lambda }
+{ \left(2 - \lambda/ \lambda_i \right)^2 }
+= 0.
+\end{equation}
+
+
+
+Under the approximation, we can make an interesting observation
+on the optimal updating scheme.
+%
+Since
+$$
+\frac{ \lambda_i^2 }{ \lambda \, (2 \lambda_i - \lambda) } \ge 1,
+$$
+with the equality achieved only at $\lambda = \lambda_i$,
+we see the from Eq. \eqref{eq:y2_sum_perfect_invt}
+that the minimal error is achieved with
+\begin{equation}
+  \lambda_2 = \dots = \lambda_n = \lambda.
+\end{equation}
+%
+An updating matrix $\mathbf w$ satisfying this condition
+can be written as
+$$
+\mathbf w
+=
+\lambda \,
+\left(
+\begin{array}{ccccc}
+  1 & \dots & 0 \\
+  \vdots &\ddots & \vdots \\
+  0 & \dots & 1
+\end{array}
+\right)
++
+c' \,
+\left(
+\begin{array}{ccccc}
+  p_1 & \dots & p_n \\
+  \vdots & & \vdots \\
+  p_1 & \dots & p_n
+\end{array}
+\right).
+$$
+%
+This shows that in terms of convergence,
+the single-bin updating scheme
+(as adopted in the WL algorithm)
+is one of the most efficient candidates
+of all multiple-bin schemes.
+
 
 
 \end{document}
